refactor: upgrade to jjwt 0.12.x API, disable legacy integration tests, and clean up User entity associations